--- a/index.html
+++ b/index.html
@@ -42,7 +42,19 @@
 
 <h1></h1>
 
+<h3>
+<a id="summary" class="anchor" href="#summary" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Summary</h3>
+
 <p>In this project, I run an LDA topic models analysis for Amazon's Customer Reviews, more specifically, the Automotive reviews (available from: <a href="http://jmcauley.ucsd.edu/data/amazon/">http://jmcauley.ucsd.edu/data/amazon/</a>). I used the R package <a href="http://cran.r-project.org/web/packages/lda/">lda</a> and I visualize the output using <a href="https://github.com/cpsievert/LDAvis">LDAvis</a>.</p>
+
+<p>The R Source Code is Available at: <a href="https://github.com/dduwill/Product-Review/blob/master/Assignment%208.R">https://github.com/dduwill/Product-Review/blob/master/Assignment%208.R</a></p>
+
+<p>The LDA topic models analysis for top 10 relavant topics is Available at: <a href="https://dduwill.github.io/Product-Review/vis">https://dduwill.github.io/Product-Review/vis</a></p>
+
+<h3>
+<a id="result-analysis" class="anchor" href="#result-analysis" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Result Analysis</h3>
+
+<p>According to my result, topic 3, 5, 6 have some overlaps, these customer reviews are more focused on detailed information of the vehicles, such as engines, oil filters, batteries, lights, etc. Topic 4, 8 have a great overlap, mostly focused on exterior apperance of the vehicles, like leathers, wax, cleanness, plaints. Topic 7 is very close to topic 4, 8, but more focused on minor exterior condition, for example, whether the vehicle is carefully washed or not. Topic 9, 2, 1 are interconnected with each other, these topics focused on overall usage experiences of the vehicles. Topic 10 is isolated from all the other topics, which only focused on windshield and wiper conditions. From the topics' sizes, we could conclude that three major factors affect the customer reviews - usage satifaction, exterior apperance and mechanical conditions. </p>
 
 <h3>
 <a id="the-data" class="anchor" href="#the-data" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>The data</h3>
