--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <p>The R Source Code is Available at: <a href="https://github.com/dduwill/Product-Review/blob/master/Assignment%208.R">https://github.com/dduwill/Product-Review/blob/master/Assignment%208.R</a></p>
 
 <p>The LDA topic models analysis for top 10 relavant topics is Available at: <a href="https://dduwill.github.io/Product-Review/vis">https://dduwill.github.io/Product-Review/vis</a>
-<img src="https://github.com/dduwill/Product-Review/blob/master/images/Capture.PNG" alt=""></p>
+<img src="https://github.com/dduwill/Product-Review/blob/master/images/Capture.PNG?raw=true" alt=""></p>
 
 <h3>
 <a id="result-analysis" class="anchor" href="#result-analysis" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Result Analysis</h3>
